# smol-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  path.cpp  path.h  small_string.h  smol_string.h
.github/workflows/: benchmark.yml  build-and-test-and-coverage copy.yml  build-and-test-and-coverage.yml  clang-tidy.yml  unit_test.yml
benchmarks/: CMakeLists.txt  main.cpp
include/smol/: algorithm.h  filesystem.h  path.h  smol.h  string.h  string_view.h
include/smol/filesystem/: path.h
port/: CMakeLists.txt  filesystem_posix.cpp
scripts/: generate_coverage_report.sh  run_linter_checks.sh
src/: filesystem_path.cpp  filesystem_posix.cpp
unit_test/: CMakeLists.txt  test_algorithm.cpp  test_filesystem.cpp  test_path.cpp  test_small_string.cpp  test_string.cpp  test_string_view.cpp
